<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/box_background"
              tools:context="com.gts.coordinator.fragments.ForgotPassword">


    <TextView

        android:id="@+id/tv_forgot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_gravity="center"
        android:layout_marginTop="19dp"
        android:text="Please Enter Email"
        android:textColor="@color/black"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/et_forgot_email"
        android:layout_width="250dp"
        android:layout_height="27dp"
        android:layout_below="@+id/tv_forgot_title"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:hint="@string/forget_email"
        android:imeOptions="actionNext"
        android:paddingLeft="36dp"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/et_OTP"
        android:layout_width="250dp"
        android:layout_height="27dp"
        android:layout_below="@+id/et_forgot_email"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"

        android:layout_marginLeft="19dp"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:hint="@string/forget_conform_code"
        android:paddingLeft="36dp"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:selectAllOnFocus="true"

        android:textColor="@color/black"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="27dp"
        android:layout_below="@+id/et_OTP"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"

        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:hint="@string/reset_password"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingEnd="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="3dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_re_enter_password"
        android:layout_width="250dp"
        android:layout_height="27dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:background="@color/white"

        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:paddingBottom="3dp"
        android:paddingEnd="4dp"
        android:paddingLeft="5dp"
        android:paddingRight="4dp"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_re_enter_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/warning"
        android:textColor="#ff0000"
        android:textSize="14dp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/btn_otp_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_email_submit"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/btn_background"
        android:text="OTP-Submit"

        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_submit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_otp_confirm_btn"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/btn_background"
        android:text="Pwd-Submit"

        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_email_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/btn_background"
        android:text="Email-Submit"
        android:textColor="@color/white"/>

</LinearLayout>
