<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/text_size_24"
    android:layout_marginRight="@dimen/text_size_24">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/dp20">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_size_24"
                android:gravity="center_horizontal"
                android:text="@string/enterOtp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_bookingid" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sentToMobile"
                android:textColor="@color/black"
                android:textSize="@dimen/text_others" />
            <ProgressBar
                android:id="@+id/progressbar_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerInParent="true"/>
            <EditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_size_highlight"
                android:gravity="center_horizontal"
                android:hint="@string/enterOtp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_otp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/size_45"
                android:layout_marginTop="@dimen/text_size_24"
                app:rippleColor="@color/reble_color"
                app:cornerRadius="@dimen/dp15"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>